--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,30 @@
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
-spring.datasource.username=sa
-spring.datasource.password=sa
+#----- H2 Properties
+
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+#spring.datasource.username=sa
+#spring.datasource.password=sa
+#spring.jpa.hibernate.ddl-auto=update
+
+#----- Mysql Properties
+
+#Data Source Properties
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/exchange_app_db?createDatabaseIfNotExist=true&amp
+spring.datasource.username=root
+spring.datasource.password=12345
+#JPA Properties
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql=TRUE
+spring.jpa.properties.hibernate.show_sql=TRUE
 spring.jpa.hibernate.ddl-auto=update
+###Logging Levels
+# Disable the default loggers
+logging.level.org=WARN
+logging.level.blog=WARN
+#Show SQL executed with parameter bindings
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor=TRACE
 
 application.currency-api.url=http://apilayer.net/api/live
 application.currency-api.accessKey=b833fe699257c25cd315cc538c8d0438
