Added error handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,5 +26,7 @@ logging.level.blog=WARN
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor=TRACE
 
+server.error.include-message=always
+
 application.currency-api.url=http://apilayer.net/api/live
 application.currency-api.accessKey=b833fe699257c25cd315cc538c8d0438
